syntax = "proto3";

package user.v1;
option  go_package = "github.com/Wafer233/WaferTakeOut/Server/wafer-take-out-server/user-service/proto;userpb";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest{
  string code = 1;
}

message LoginResponse {
  int64 id = 1;
  string openId = 2;
  string token = 3;
}
